Name:                giraffe
Version:             0.1
Synopsis:            A fast and reliable Bittorrent tracker
Description:         A fast and reliable Bittorrent tracker
Homepage:            http://github.com/ameingast/giraffe
License:             BSD3
License-file:        LICENSE
Author:              Andreas Meingast
Maintainer:          ameingast@gmail.com
Category:            Network
Build-type:          Simple
Cabal-version:       >= 1.2

Executable giraffe
  main-is:          Main.hs
  hs-source-dirs:   src
  
  Build-depends:    base            >= 4.3 && < 5.0,
                    bytestring      >= 0.9 && < 1.0,
                    time            >= 1.2 && < 1.3,
                    containers      >= 0.4 && < 0.5,
                    enumerator      >= 0.4 && < 0.5,

                    warp            >= 0.4 && < 0.5,
                    wai             >= 0.4 && < 0.5,
                    
                    bencode         >= 0.5 && < 0.6,
                    url             >= 2.1 && < 2.2,
                    http-types      >= 0.6 && < 0.7
    
  ghc-prof-options: -prof -auto-all  
  
  ghc-options:      -O2 -Wall -fwarn-tabs -funbox-strict-fields
                    -threaded -fno-warn-unused-do-bind
                    
Test-Suite test-giraffe
  main-is:          TestMain.hs
  hs-source-dirs:   test src
  
  type:             exitcode-stdio-1.0
  
  Build-depends:    base            >= 4.3 && < 5.0,
                    bytestring      >= 0.9 && < 1.0,
                    time            >= 1.2 && < 1.3,
                    containers      >= 0.4 && < 0.5,
                    enumerator      >= 0.4 && < 0.5,

                    warp            >= 0.4 && < 0.5,
                    wai             >= 0.4 && < 0.5,
                    
                    bencode         >= 0.5 && < 0.6,
                    url             >= 2.1 && < 2.2,
                    http-types      >= 0.6 && < 0.7,
                    
                    QuickCheck      >= 2.4 && < 2.5
                    
  ghc-options:      -O2 -Wall -fwarn-tabs -funbox-strict-fields
                    -threaded -fno-warn-unused-do-bind